--- a/estilo.css
+++ b/estilo.css
@@ -22,7 +22,17 @@
     border-radius: 4px;
     
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+}
+
+.desafio {
+    margin-bottom: 15px;
+    background-color: #d0d3d4;
+    border-radius: 4px;
+    
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
 }
 
 
@@ -68,45 +78,12 @@ h1 {
 }
 
 .container4 {
-    justify-content: space-between;    
+    justify-content: space-between;
+    
 }
 .container5 {
     justify-content: space-around;
 }
 .container6 {
-    justify-content:space-evenly ;
-}
-
-/* Exercicio B */
-
-.container-exercicioB .box1 {
-    order: 4;
-}
-
-.container-exercicioB .box2 {
-    order: 3;
-}
-
-.container-exercicioB .box3 {
-    order: 2;
-}
-
-.container-exercicioB .box4 {
-    order: 1;
-}
-
-.desafio .box1 {
-    order: 4;
-}
-
-.desafio .box2 {
-    order: 3;
-}
-
-.desafio .box3 {
-    order: 2;
-}
-
-.desafio .box4 {
-    order: 1;
+    justify-content: space-evenly ;
 }
